test/conformance/chainsaw/imagevalidatingpolicies/background-report/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-reporting
  labels:
    reporting: "true"
spec:
  containers:
  - name: nginx
    image: nginx:latest
