test/conformance/chainsaw/imagevalidatingpolicies/background-report/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-sample
spec:
  webhookConfiguration:
    timeoutSeconds: 20
  failurePolicy: Ignore
  validationActions:
  - Audit
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE" ]
      resources: [ "pods" ]
  matchConditions:
  - name: "check-prod-label"
    expression: >-
      has(object.metadata.labels) && has(object.metadata.labels.prod) && object.metadata.labels.prod == 'true'
  imageRules:
  - glob: ghcr.io/*
  attestors:
  - name: notary
    notary:
      certs: |-
        -----BEGIN CERTIFICATE-----
        MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
        uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
        -----END CERTIFICATE-----
  attestations:
  - name: sbom
    referrer:
      type: sbom/cyclone-dx
  validations:
  - expression: >-
      images.containers.map(image, verifyImageSignatures(image, [attestors.notary])).all(e, e > 0)
    message: failed to verify image with notary cert
  - expression: >-
      images.containers.map(image, verifyAttestationSignatures(image, attestations.sbom ,[attestors.notary])).all(e, e > 0)
    message: failed to verify attestation with notary cer
  - expression: >-
      images.containers.map(image, payload(image, attestations.sbom).bomFormat == 'CycloneDX').all(e, e)
    message: sbom is not a cyclone dx sbom
