test/conformance/chainsaw/imagevalidatingpolicies/background-report/test-serviceaccounts.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: my-sa
  namespace: default
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: other-sa
  namespace: default
